@@ -231,6 +231,9 @@ public:
 					// Get frame for desired direction.
 	int get_dir_framenum(int dir, int frnum) const
 		{ return (frnum&0xf) + rotate[dir]; }
+					// Get it using current dir.
+	int get_dir_framenum(int frnum) const
+		{ return (frnum&0xf) + (get_framenum()&(16 | 32)); }
 					// Move to new abs. location.
 	virtual void move(int newtx, int newty, int newlift);
 	void move(Tile_coord t)
